# alarm

./: .gitignore  README.md
client/: .gitignore  README.md  sdkconfig.defaults
client/main/: CMakeLists.txt  alarm_client.h  config.h  idf_component.yml  log.h  main.c  mdns_local.c  mdns_local.h  tcp_client_v4.c  wifi.c  wifi.h
doc/: concept.puml
hardware/: .gitignore  alarm.kicad_prl  alarm.kicad_pro  alarm.kicad_sch  extra_symbols.kicad_sym
server/: .gitignore  README.md  pom.xml
server/src/main/java/ar/com/drk/alarm/server/: ServerApplication.java  ServerConfiguration.java  ServerController.java
server/src/main/java/ar/com/drk/alarm/server/google/: CalendarService.java  GoogleCalendarClient.java  TimeService.java
server/src/main/resources/: application-local.properties  application.properties
server/src/test/java/ar/com/drk/alarm/server/: ServerApplicationTests.java
server/src/test/java/ar/com/drk/alarm/server/google/: CalendarServiceTest.java
server/src/test/resources/: application-test.properties
